# kf-boot

./: README.md  pyproject.toml  setup-guide.md
.github/workflows/: kf-boot-app-ci.yml
src/kfboot/: __init__.py  admitting.py  app.py  auth.py  basing.py  boot_client.py  boot_exchanger.py  cli.py  config.py  expiring.py  limiting.py  onboarding.py  provisioning.py  runtime.py  store.py  sweeping.py  utils.py
tests/: __init__.py  conftest.py  support.py  test_account_routes.py  test_boot_client.py  test_cleanup_runtime.py  test_cli.py  test_config.py  test_onboarding_routes.py  test_store.py  test_surfaces.py
