[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kf-boot"
version = "0.0.1"
description = "Minimal KERI Foundation platform service for witness and watcher provisioning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "falcon>=4.0.2",
    "requests>=2.32.3",
]

[project.scripts]
kf-boot = "kfboot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kfboot*"]

[tool.setuptools.package-dir]
"" = "src"
