[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kf-boot"
version = "0.0.1"
description = "Minimal KERI Foundation platform service for witness and watcher provisioning"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "falcon>=4.0.2",
    "keri>=2.0.0-dev6",
    "requests>=2.32.3",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.11.0",
]

[project.scripts]
kf-boot = "kfboot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kfboot*"]

[tool.setuptools.package-dir]
"" = "src"
